<resources>
    <string name="app_name">MP1</string>
    <string name="heading_splash">Skip the <font color='#D52A2E'>lines</font>,
embrace the <font color='#3DA449'>delicious</font>!</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign In</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
    <string name="food_price">₱ %1$.2f</string>
    <string name="peso">₱ </string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="foodconc">Food Concessionaire</string>
    <string name="food_name">Food Name</string>
    <string name="food_price_string">Food Price</string>
    <string name="proceed">Proceed</string>
    <string name="feast">Feast!</string>
    <string name="splash_subheading">Change the game of your school lunch experience — from cafeteria to your classroom!</string>
    <string name="order_your_favorite_food">Order Your\nFavorite Food</string>
    <string name="potato_corner">Potato Corner</string>
    <string name="hello">Hello!</string>
    <string name="large">Large</string>
    <string name="zero_cost">₱0.00</string>
    <string name="one">1</string>
    <string name="buy">Buy</string>
    <string name="belgian_waffles">Belgian Waffles</string>
    <string name="coffee_bean">Coffee Bean</string>
    <string name="login_successful">Login Successful!</string>
    <string name="required">Required</string>
    <string name="invalid_login">Invalid login credentials</string>
    <string name="use_iacademy_email">Use iAcademy Email</string>
    <string name="minimum_8_character_password">Minimum 8 Character Password</string>
    <string name="password_must_contain_a_number">Password must contain a number</string>
    <string name="password_must_contain_a_capital_letter">Password must contain a capital letter</string>
    <string name="password_must_contain_a_small_letter">Password must contain a small letter</string>
    <string name="potatocorner_email">potatocorner@gmail.com</string>
    <string name="belgianwaffles_email">belgianwaffles@gmail.com</string>
    <string name="coffeebean_email">coffeebean@gmail.com</string>
    <string name="regular">Regular</string>
    <string name="maliit">Maliit</string>
    <string name="malaki_slight">Malaki slight</string>
    <string name="malaki_na">Malaki na</string>
    <string name="jumbo">Jumbo</string>
    <string name="mega">Mega</string>
    <string name="malaki_na_talaga">Malaki na talaga</string>
    <string name="giga">Giga</string>
    <string name="grabe_ang_laki">Grabe ang laki</string>
    <string name="tera">Tera</string>
    <string name="ang_lakeeee">ANG LAKEEEE!!!</string>
    <string name="plain">Plain</string>
    <string name="walang_lasa">Walang lasa</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="superior">Superior</string>
    <string name="banana">Banana</string>
    <string name="haha_banana">Haha banana</string>
    <string name="strawberry">Strawberry</string>
    <string name="acm_hehe">Acm hehe</string>
    <string name="matcha">Matcha</string>
    <string name="ayaw_ni_justine">Ayaw ni Justine</string>
    <string name="iced_americano">Iced Americano</string>
    <string name="di_ba_pilipino">\'Di ba pilipino?</string>
    <string name="iced_vanilla_latte">Iced Vanilla Latte</string>
    <string name="vanila"><![CDATA[Vanila >>]]></string>
    <string name="iced_caramel_macchiato">Iced Caramel Macchiato</string>
    <string name="pano_i_pronounce">Pano i-pronounce?</string>

</resources>